<resources>
    <string name="TargetSymbol">TargetSymbol</string>
    <string name="TargetSchedule">Target Schedule</string>
    <string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="week3">Week 3</string>
    <string name="viewCalendar">Calendar</string>
    <string name="startView">Start</string>
    <string name="endView">End</string>
    <string name="jobView">Job</string>
    <string name="sunday">Sun.</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tues.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thurs.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="cashier">Cashier</string>
    <string name="carts">Carts</string>
    <string name="clear">Clear Content</string>
    <string name="save">Save Content</string>
    <string name="shift">Move Content to Week 1</string>
    <string name="shift2">Move Content to Week 2</string>
</resources>
